chore(rest): adding host nqn in node object
