# control-plane/rest/openapi-specs/v0_api_spec.yaml
@@ -2207,6 +2207,10 @@ components:
           description: the drain state
           allOf:
             - $ref: '#/components/schemas/CordonDrainState'
+        node_nqn:
+          description: hosts allowed to connect the target
+          allOf:
+            - $ref: '#/components/schemas/HostNqn'
       additionalProperties: false
       required:
         - grpcEndpoint
@@ -2226,6 +2230,10 @@ components:
           $ref: '#/components/schemas/NodeId'
         status:
           $ref: '#/components/schemas/NodeStatus'
+        node_nqn:
+          description: hosts allowed to connect the target
+          allOf:
+            - $ref: '#/components/schemas/HostNqn'
       required:
         - grpcEndpoint
         - id
